@@ -1,5 +1,9 @@
 Revision history for Perl extension MooseX-Getopt
 
+  * MooseX::Getopt::Dashes
+   - Document that using a cmd_flag argument to attributes can be used to
+     override the tr/_/-/ replacement ::Dashes does on attribute names
+
 0.26 Thu. Dec 10 2009
   * MooseX::Getopt::Basic
    - Fix bug with attribute names containing upper case letters.
